2010-09-25  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-libtool, mingw32-gdb.

	* mingw32/mingw32-libtool.xml: Add new libtool-2.4-1 release.

	* mingw32/mingw32-gdb.xml: Add missing libexpat-dll requirement.

	* mingw32/issue.log: Updated accordingly.

2010-09-11  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-automake.

	* mingw32/mingw32-automake.xml: Add new automake-1.11.1 release.

	* mingw32/issue.log: Updated accordingly.

2010-09-10  Chris Sutcliffe  <ir0nh34d@gmail.com>

	Update & publish mingw32-{gdb,runtime}

	* mingw32/mingw32-gdb.xml: Clean up formatting; add source and licence
	specifications; add new doc component; generate and publish
	mingw32-gdb.xml.lzma.
	* mingw32/mingw32-runtime.xml: Clean up formatting; reduce to deliver
	only the latest available releases; restore mingw-runtime alias; add
	source and licence specifications; ensure -dev component requires -dll
	component; generate and publish mingw32-runtime.xml.lzma.

	* mingw32/issue.log: Updated accordingly.

2010-09-06  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-{cygutils,gendef,mingw-utils,pexports,popt}
	Add & publish mingw32-pdcurses

	* mingw32/mingw32-cygutils.xml: Clean up formatting; move versioned
	DLL requirements specs inside the dependent release entity recent
	releaseof all components; generate and publish
	mingw32-cygutils.xml.lzma.
	* mingw32/mingw32-gendef.xml: Clean up formatting; generate and
	publish mingw32-gendef.xml.lzma.
	* mingw32/mingw32-mingw-utils.xml: Clean up formatting; generate and
	publish mingw32-mingw-utils.xml.lzma.
	* mingw32/mingw32-pexports.xml: Clean up formatting; generate and
	publish mingw32-pexports.xml.lzma.
	* mingw32/mingw32-popt.xml: Clean up formatting; move versioned DLL
	requirements specs inside the dependent release entity recent release
	of all components; generate and publish mingw32-popt.xml.lzma.