@@ -40,14 +40,17 @@
         <requires eq="msys-perl-*-msys-*-bin.tar" />
         <requires eq="msys-texinfo-*-msys-*-bin.tar" />
         <release tarname="autoconf-2.65-1-msys-1.0.13-bin.tar.lzma" />
+        <release tarname="autoconf-2.67-1-msys-1.0.15-bin.tar.lzma" />
       </component>
 
       <component class="doc">
         <release tarname="autoconf-2.65-1-msys-1.0.13-doc.tar.lzma" />
+        <release tarname="autoconf-2.67-1-msys-1.0.15-doc.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="autoconf-2.65-1-msys-1.0.13-lic.tar.lzma" />
+        <release tarname="autoconf-2.67-1-msys-1.0.15-lic.tar.lzma" />
       </component>
     </package>
 
